Adjusted position default variables

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <title>XAUMAN | Coming Soon</title>
   <!--MetaData-->
   <meta name="description"
-    content=" We are seasoned Gold Forex Traders helping individuals and institutions meet and surpass their financial goals.">
+    content="We are seasoned Gold Forex Traders helping individuals and institutions meet and surpass their financial goals.">
   <meta name="theme-color" content="#f89a4b">
   <link rel="canonical" href="https://xauman.com/index.html">
   <meta property="og:locale" content="en_US">
@@ -73,7 +73,8 @@
       <div class="position-absolute top-0 start-0 w-100 h-100 bg-black opacity-50" style="pointer-events: none;"></div>
       <div class="container">
         <a class="navbar-brand text-muted"><img src="src/logos/XAU-32x32.webp" alt="Xauman Logo"
-            class="d-inline-block align-text-center mx-2">XAUman</a>
+            class="d-inline-block align-text-center mx-2"><strong class="text-color-red">XAU</strong><strong
+            class="text-color-blue">man</strong></a>
         <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
           aria-controls="offcanvasExample" aria-label="Toggle navigation">
           <i class="fa fa-bars"></i>
@@ -90,6 +91,30 @@
             <li class="nav-item">
               <a class="nav-link" href="#Subscribe">Subscribe</a>
             </li>
+            <li class="nav-item position-absolute start-70"><button class="btn btn-secondary bg-dark" type="button"
+                data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
+                aria-controls="collapseExample">
+                Share on Social Media
+              </button>
+              <div class="collapse bg-black" id="collapseExample">
+                <ul class="social-list vertical">
+                  <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
+                      class="social-list-facebook "
+                      href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fxauman.com"
+                      aria-label="facebook follow button"><i class="fa fa-facebook align-middle"></i>Facebook</a></li>
+                  <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
+                      class="social-list-twitter "
+                      href="https://twitter.com/intent/tweet?text=We%20are%20seasoned%20Gold%20Forex%20Traders%20helping%20individuals%20and%20institutions%20meet%20and%20surpass%20their%20financial%20goals.%20%20https://xauman.com/"
+                      aria-label="twitter follow button"><i class="fa fa-twitter align-middle"></i>Twitter</a></li>
+                  <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
+                      class="social-list-whatsapp "
+                      href="whatsapp://send?text=We%20are%20seasoned%20Gold%20Forex%20Traders%20helping%20individuals%20and%20institutions%20meet%20and%20surpass%20their%20financial%20goals.%20https://xauman.com/"
+                      aria-label="whatsapp follow button"><i class="fa fa-whatsapp align-middle"></i>Whatsapp</a></li>
+                  <li class="mx-3 my-2"><a target="_blank" rel="noopener noreferrer" class="social-list-telegram "
+                      href="https://t.me/share/url?url=https://xauman.com/&text=We are seasoned Gold Forex Traders helping individuals and institutions meet and surpass their financial goals."
+                      aria-label="telegram follow button"><i class="fa fa-telegram align-middle"></i>Telegram</a></li>
+                </ul>
+            </li>
           </ul>
           <span class="navbar-brand">
             Coming soon!!
@@ -104,7 +129,8 @@
       aria-labelledby="offcanvasExampleLabel">
       <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="offcanvasExampleLabel"><a class="navbar-brand text-muted"><img
-              src="src/logos/XAU-32x32.webp" alt="Xauman Logo" class="d-inline-block align-text-center mx-2">XAUman</a>
+              src="src/logos/XAU-32x32.webp" alt="Xauman Logo" class="d-inline-block align-text-center mx-2"><strong
+              class="text-color-red">XAU</strong><strong class="text-color-blue">man</strong></a>
         </h5>
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
@@ -121,21 +147,20 @@
             <div class="collapse bg-black" id="collapseExample">
               <ul class="social-list vertical">
                 <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
-                    class="social-list-facebook " href="https://www.facebook.com/profile.php?id=100089398025541"
+                    class="social-list-facebook "
+                    href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fxauman.com"
                     aria-label="facebook follow button"><i class="fa fa-facebook align-middle"></i>Facebook</a></li>
                 <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
-                    class="social-list-twitter " href="https://twitter.com/XaumanForex"
+                    class="social-list-twitter "
+                    href="https://twitter.com/intent/tweet?text=We%20are%20seasoned%20Gold%20Forex%20Traders%20helping%20individuals%20and%20institutions%20meet%20and%20surpass%20their%20financial%20goals.%20%20https://xauman.com/"
                     aria-label="twitter follow button"><i class="fa fa-twitter align-middle"></i>Twitter</a></li>
                 <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
-                    class="social-list-instagram " href="https://www.instagram.com/xaumanforex/"
-                    aria-label="instagram follow button"><i class="fa fa-instagram align-middle"></i>Instagram</a></li>
-                <li class="border-bottom border-secondary mx-3 my-2 social-list-tiktok"><a target="_blank"
-                    rel="noopener noreferrer" href="https://www.tiktok.com/@xaumanforex_xmf" class="dropdown-item"
-                    aria-label="tiktok follow button"><i class="bi bi-tiktok align-middle"></i>Tiktok
-                  </a></li>
+                    class="social-list-whatsapp "
+                    href="whatsapp://send?text=We%20are%20seasoned%20Gold%20Forex%20Traders%20helping%20individuals%20and%20institutions%20meet%20and%20surpass%20their%20financial%20goals.%20https://xauman.com/"
+                    aria-label="whatsapp follow button"><i class="fa fa-whatsapp align-middle"></i>Whatsapp</a></li>
                 <li class="mx-3 my-2"><a target="_blank" rel="noopener noreferrer" class="social-list-telegram "
-                    href="https://t.me/+6juAbHJs9wI4ZmI0" aria-label="telegram follow button"><i
-                      class="fa fa-telegram align-middle"></i>Telegram</a></li>
+                    href="https://t.me/share/url?url=https://xauman.com/&text=We are seasoned Gold Forex Traders helping individuals and institutions meet and surpass their financial goals."
+                    aria-label="telegram follow button"><i class="fa fa-telegram align-middle"></i>Telegram</a></li>
               </ul>
             </div>
           </li>
