Added share button on desktop navigation bar

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-black background-bg shadow" id="nav-bg">
       <div class="position-absolute top-0 start-0 w-100 h-100 bg-black opacity-50" style="pointer-events: none;"></div>
       <div class="container">
-        <a class="navbar-brand text-muted"><img src="src/logos/XAU-32x32.webp" alt="Xauman Logo"
+        <a class="navbar-brand"><img src="src/logos/XAU-32x32.webp" alt="Xauman Logo"
             class="d-inline-block align-text-center mx-2"><strong class="text-color-red">XAU</strong><strong
             class="text-color-blue">man</strong></a>
         <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
@@ -91,31 +91,32 @@
             <li class="nav-item">
               <a class="nav-link" href="#Subscribe">Subscribe</a>
             </li>
-            <li class="nav-item position-absolute start-70"><button class="btn btn-secondary bg-dark" type="button"
-                data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
-                aria-controls="collapseExample">
-                Share on Social Media
-              </button>
-              <div class="collapse bg-black" id="collapseExample">
-                <ul class="social-list vertical">
-                  <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
-                      class="social-list-facebook "
-                      href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fxauman.com"
-                      aria-label="facebook follow button"><i class="fa fa-facebook align-middle"></i>Facebook</a></li>
-                  <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
-                      class="social-list-twitter "
-                      href="https://twitter.com/intent/tweet?text=We%20are%20seasoned%20Gold%20Forex%20Traders%20helping%20individuals%20and%20institutions%20meet%20and%20surpass%20their%20financial%20goals.%20%20https://xauman.com/"
-                      aria-label="twitter follow button"><i class="fa fa-twitter align-middle"></i>Twitter</a></li>
-                  <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
-                      class="social-list-whatsapp "
-                      href="whatsapp://send?text=We%20are%20seasoned%20Gold%20Forex%20Traders%20helping%20individuals%20and%20institutions%20meet%20and%20surpass%20their%20financial%20goals.%20https://xauman.com/"
-                      aria-label="whatsapp follow button"><i class="fa fa-whatsapp align-middle"></i>Whatsapp</a></li>
-                  <li class="mx-3 my-2"><a target="_blank" rel="noopener noreferrer" class="social-list-telegram "
-                      href="https://t.me/share/url?url=https://xauman.com/&text=We are seasoned Gold Forex Traders helping individuals and institutions meet and surpass their financial goals."
-                      aria-label="telegram follow button"><i class="fa fa-telegram align-middle"></i>Telegram</a></li>
-                </ul>
-            </li>
           </ul>
+          <span class="navbar-brand position-relative "><button class="btn btn-secondary bg-dark text-muted"
+              type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
+              aria-controls="collapseExample">
+              Share on Social Media
+            </button>
+            <div class="collapse bg-black position-absolute top-20" id="collapseExample">
+              <ul class="social-list vertical">
+                <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
+                    class="social-list-facebook "
+                    href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fxauman.com"
+                    aria-label="facebook follow button"><i class="fa fa-facebook align-middle"></i>Facebook</a></li>
+                <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
+                    class="social-list-twitter "
+                    href="https://twitter.com/intent/tweet?text=We%20are%20seasoned%20Gold%20Forex%20Traders%20helping%20individuals%20and%20institutions%20meet%20and%20surpass%20their%20financial%20goals.%20%20https://xauman.com/"
+                    aria-label="twitter follow button"><i class="fa fa-twitter align-middle"></i>Twitter</a></li>
+                <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
+                    class="social-list-whatsapp "
+                    href="whatsapp://send?text=We%20are%20seasoned%20Gold%20Forex%20Traders%20helping%20individuals%20and%20institutions%20meet%20and%20surpass%20their%20financial%20goals.%20https://xauman.com/"
+                    aria-label="whatsapp follow button"><i class="fa fa-whatsapp align-middle"></i>Whatsapp</a></li>
+                <li class="mx-3 my-2"><a target="_blank" rel="noopener noreferrer" class="social-list-telegram "
+                    href="https://t.me/share/url?url=https://xauman.com/&text=We are seasoned Gold Forex Traders helping individuals and institutions meet and surpass their financial goals."
+                    aria-label="telegram follow button"><i class="fa fa-telegram align-middle"></i>Telegram</a></li>
+              </ul>
+            </div>
+          </span>
           <span class="navbar-brand">
             Coming soon!!
           </span>
@@ -128,7 +129,7 @@
     <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasExample"
       aria-labelledby="offcanvasExampleLabel">
       <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasExampleLabel"><a class="navbar-brand text-muted"><img
+        <h5 class="offcanvas-title" id="offcanvasExampleLabel"><a class="navbar-brand"><img
               src="src/logos/XAU-32x32.webp" alt="Xauman Logo" class="d-inline-block align-text-center mx-2"><strong
               class="text-color-red">XAU</strong><strong class="text-color-blue">man</strong></a>
         </h5>
