Added page loader styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="description"
     content="We are seasoned Gold Forex Traders helping individuals and institutions meet and surpass their financial goals.">
   <meta name="theme-color" content="#f89a4b">
-  <link rel="canonical" href="https://xauman.com/index.html">
+  <link rel="canonical" href="https://xauman.com/">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="Website">
   <meta property="og:title" content="XAUman Forex">
@@ -75,8 +75,8 @@
         <a class="navbar-brand"><img src="src/logos/XAU-32x32.webp" alt="Xauman Logo"
             class="d-inline-block align-text-center mx-2"><strong class="text-color-red">XAU</strong><strong
             class="text-color-blue">man</strong></a>
-        <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
-          aria-controls="offcanvasExample" aria-label="Toggle navigation">
+        <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasXauman"
+          aria-controls="offcanvasXauman" aria-label="Toggle navigation">
           <i class="fa fa-bars"></i>
         </button>
         <!--Desktop Navigation-->
@@ -93,11 +93,11 @@
             </li>
           </ul>
           <span class="navbar-brand position-relative "><button class="btn btn-secondary bg-dark text-muted"
-              type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
-              aria-controls="collapseExample">
+              type="button" data-bs-toggle="collapse" data-bs-target="#collapseXauman" aria-expanded="false"
+              aria-controls="collapseXauman">
               Share on Social Media
             </button>
-            <div class="collapse bg-black position-absolute top-20" id="collapseExample">
+            <div class="collapse bg-black position-absolute top-20" id="collapseXauman">
               <ul class="social-list vertical">
                 <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
                     class="social-list-facebook "
@@ -126,10 +126,10 @@
     </nav>
 
     <!--Mobile Navigation-->
-    <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasExample"
-      aria-labelledby="offcanvasExampleLabel">
+    <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasXauman"
+      aria-labelledby="offcanvasXaumanLabel">
       <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasExampleLabel"><a class="navbar-brand"><img
+        <h5 class="offcanvas-title" id="offcanvasXaumanLabel"><a class="navbar-brand"><img
               src="src/logos/XAU-32x32.webp" alt="Xauman Logo" class="d-inline-block align-text-center mx-2"><strong
               class="text-color-red">XAU</strong><strong class="text-color-blue">man</strong></a>
         </h5>
@@ -142,10 +142,10 @@
           </li>
           <li class="nav-item">
             <button class="btn btn-secondary bg-dark" type="button" data-bs-toggle="collapse"
-              data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+              data-bs-target="#collapseXauman" aria-expanded="false" aria-controls="collapseXauman">
               Share on Social Media
             </button>
-            <div class="collapse bg-black" id="collapseExample">
+            <div class="collapse bg-black" id="collapseXauman">
               <ul class="social-list vertical">
                 <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
                     class="social-list-facebook "
@@ -208,7 +208,7 @@
       </div>
       <div class="row row-cols-lg-auto align-items-start justify-content-center bg-black" style="height:15vh">
         <div class="col-12">
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+          <input type="email" class="form-control" id="XaumanInputEmail1" aria-describedby="emailHelp"
             style="background-color:#000" placeholder="E-mail">
         </div>
         <div class="col-12 justify-content-md-start"><button type="button" class="btn btn-primary bg-dark">Sign
