Added page loader

--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 
   </header>
   <main>
+    <div class="loader"></div>
     <div class="container-fluid text-center">
       <div class="row justify-content-center align-items-center">
         <div class="col background-bg" id="main-bg">
@@ -236,7 +237,7 @@
 
   <!--Scripts-->
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-
+  <script src="assets/js/interface.js"></script>
   <script src="assets/js/core.js"></script>
 
 </body>
