--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
       "addressCountry": "Kenya"
     }
   }</script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="assets/js/interface.js"></script>
+
   <!-- Favicons -->
   <link rel="shortcut icon" sizes="64x64" width="64px" height="64px" href="src/logos/XAU-64x64.webp">
   <link rel="apple-touch-icon" sizes="32x32" width="32px" height="32px" href="src/logos/XAU-32x32.webp">
@@ -213,7 +212,7 @@
         <form action="mail.php" id="contact-form" class="js-ajax-form" method="post">
           <div class="col-md-12 float-left">
             <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp"
-              style="background-color:#000" placeholder="E-mail">
+              style="background-color:#000" placeholder="E-mail" value="" required>
           </div>
           <div class="col-md-12 justify-content-md-start mb-2 float-right"><button type="submit"
               class="btn-submit btn btn-primary bg-dark">Sign
@@ -225,7 +224,6 @@
               <div class="error-message bg-warning">We're sorry, but something went wrong</div>
             </div>
           </div>
-
         </form>
       </div>
       <div class="clearfix"></div>
@@ -249,9 +247,18 @@
     </div>
   </footer>
 
-  <!--Scripts-->
+  <!--Scripts to Review-->
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-  <script src="assets/js/interface.js"></script>
+  <script src="assets/js/script.js"></script>
+
+  <script src="assets/js/jquery/jquery.min.js"></script>
+  <script src="assets/js/jquery/bootstrap.min.js"></script>
+  <script src="assets/js/jquery/jquery.validate.min.js"></script>
+  <script src="assets/js/jquery/wow.min.js"></script>
+  <script src="assets/js/jquery/jquery.stellar.min.js"></script>
+  <script src="assets/js/jquery/owl.carousel.min.js"></script>
+  <script src="assets/js/jquery/interface.js"></script>
+
 </body>
 
 </html>
