Index file updated

--- a/index.html
+++ b/index.html
@@ -226,7 +226,6 @@
           </div>
         </form>
       </div>
-      <div class="clearfix"></div>
       <div class="row justify-content-center text-white bg-black">Connect with us on our social media or reach-out
         to us
         on
@@ -256,6 +255,7 @@
   <script src="assets/js/jquery/jquery.validate.min.js"></script>
   <script src="assets/js/jquery/wow.min.js"></script>
   <script src="assets/js/jquery/jquery.stellar.min.js"></script>
+  <script src="assets/js/jquery/jquery.magnific-popup.js"></script>
   <script src="assets/js/jquery/owl.carousel.min.js"></script>
   <script src="assets/js/jquery/interface.js"></script>
 
