Removed unused JS scripts

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
         </div>
       </div>
       <div class="row row-cols-lg-auto align-items-start justify-content-center bg-black" style="min-height:15vh">
-        <form action="mail.php" id="contact-form" class="js-ajax-form" method="post">
-          <div class="col-md-12 float-left">
+        <form action="mail.php" id="contact-form" class="row g-3 js-ajax-form" method="post">
+          <div class="col-md-12">
             <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp"
               style="background-color:#000" placeholder="E-mail" value="" required>
           </div>
@@ -253,10 +253,6 @@
   <script src="assets/js/jquery/jquery.min.js"></script>
   <script src="assets/js/jquery/bootstrap.min.js"></script>
   <script src="assets/js/jquery/jquery.validate.min.js"></script>
-  <script src="assets/js/jquery/wow.min.js"></script>
-  <script src="assets/js/jquery/jquery.stellar.min.js"></script>
-  <script src="assets/js/jquery/jquery.magnific-popup.js"></script>
-  <script src="assets/js/jquery/owl.carousel.min.js"></script>
   <script src="assets/js/jquery/interface.js"></script>
 
 </body>
