Email template added

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </ul>
           <span class="navbar-brand position-relative "><button class="btn btn-secondary bg-dark text-muted"
               type="button" data-bs-toggle="collapse" data-bs-target="#collapseXauman" aria-expanded="false"
-              aria-controls="collapseXauman">s
+              aria-controls="collapseXauman">
               Share on Social Media
             </button>
             <div class="collapse bg-black position-absolute top-20" id="collapseXauman">
@@ -209,7 +209,7 @@
         </div>
       </div>
       <div class="row row-cols-lg-auto align-items-start justify-content-center bg-black" style="min-height:15vh">
-        <form action="mail.php" id="contact-form" class="row g-3 js-ajax-form" method="post">
+        <form action="mail.php" id="contact-form" class="row g-2 js-ajax-form" method="post">
           <div class="col-md-12">
             <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp"
               style="background-color:#000" placeholder="E-mail" value="" required>
