--- a/email/xauman_email_2.html
+++ b/email/xauman_email_2.html
@@ -272,7 +272,7 @@
                       style="
                         mso-table-lspace: 0pt;
                         mso-table-rspace: 0pt;
-                        background-image: url('https://xauman.com/src/img/Logo-06.webp');
+                        background-image: url('https://xauman.com/src/img/Trading-01.jpg');
                         background-repeat: no-repeat;
                         background-size: cover;
                         background-color: black;
@@ -330,7 +330,7 @@
                                     style="line-height: 10px"
                                   >
                                     <a
-                                      href="https://www.example.com"
+                                      href="https://xauman.com/"
                                       target="_blank"
                                       style="outline: none"
                                       tabindex="-1"
@@ -631,9 +631,9 @@
                                   "
                                 >
                                   <div class="alignment" align-item="left">
-                                    <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://www.example.com" style="height:44px;width:153px;v-text-anchor:middle;" arcsize="0%" strokeweight="0.75pt" strokecolor="#201F42" fillcolor="#201f42"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Georgia, serif; font-size:16px"><!
+                                    <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://xauman.com/" style="height:44px;width:153px;v-text-anchor:middle;" arcsize="0%" strokeweight="0.75pt" strokecolor="#201F42" fillcolor="#201f42"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Georgia, serif; font-size:16px"><!
                                     [endif]--><a
-                                      href="https://www.example.com"
+                                      href="https://xauman.com/"
                                       target="_blank"
                                       style="
                                         text-decoration: none;
@@ -1859,7 +1859,7 @@
                                     style="line-height: 10px"
                                   >
                                     <a
-                                      href="https://www.example.com"
+                                      href="https://xauman.com/"
                                       target="_blank"
                                       style="outline: none"
                                       tabindex="-1"
@@ -2527,9 +2527,9 @@
                                   "
                                 >
                                   <div class="alignment" align="left">
-                                    <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://www.example.com" style="height:44px;width:175px;v-text-anchor:middle;" arcsize="0%" strokeweight="0.75pt" strokecolor="#201F42" fillcolor="#201f42"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Georgia, serif; font-size:16px"><!
+                                    <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://xauman.com/" style="height:44px;width:175px;v-text-anchor:middle;" arcsize="0%" strokeweight="0.75pt" strokecolor="#201F42" fillcolor="#201f42"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Georgia, serif; font-size:16px"><!
                                     [endif]--><a
-                                      href="https://www.example.com"
+                                      href="https://xauman.com/"
                                       target="_blank"
                                       style="
                                         text-decoration: none;
@@ -2569,7 +2569,7 @@
                                           >Complete Now</span
                                         ></span
                                       ></a
-                                    >><!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
+                                    >
                                   </div>
                                 </td>
                               </tr>
@@ -2800,7 +2800,7 @@
                                   >
                                     <p style="margin: 0">
                                       <a
-                                        href="https://www.example.com"
+                                        href="https://xauman.com/"
                                         target="_blank"
                                         style="
                                           text-decoration: underline;
@@ -2905,7 +2905,7 @@
                                     style="line-height: 10px"
                                   >
                                     <a
-                                      href="https://www.example.com"
+                                      href="https://xauman.com/"
                                       target="_blank"
                                       style="outline: none"
                                       tabindex="-1"
@@ -3050,38 +3050,7 @@
                       cellspacing="0"
                       role="presentation"
                       style="mso-table-lspace: 0pt; mso-table-rspace: 0pt"
-                    >
-                      <tr>
-                        <td class="pad">
-                          <div class="alignment" align="center">
-                            <table
-                              border="0"
-                              cellpadding="0"
-                              cellspacing="0"
-                              role="presentation"
-                              width="100%"
-                              style="
-                                mso-table-lspace: 0pt;
-                                mso-table-rspace: 0pt;
-                              "
-                            >
-                              <tr>
-                                <td
-                                  class="divider_inner"
-                                  style="
-                                    font-size: 1px;
-                                    line-height: 1px;
-                                    border-top: 1px solid #282343;
-                                  "
-                                >
-                                  <span>&#8202;</span>
-                                </td>
-                              </tr>
-                            </table>
-                          </div>
-                        </td>
-                      </tr>
-                    </table>
+                    ></table>
                     <div
                       class="spacer_block block-2"
                       style="height: 20px; line-height: 20px; font-size: 1px"
